# mesh_partition

./: .gitmodules  CMakeLists.txt  MetisSetup.cmake  README.md  art_cpp.sh  itoa.cpp  makefile  matrix_class.cpp  matrix_class.h  mesh.cpp  mesh.h  partition.cpp  partition.vcproj  partition.vcxproj
METIS2ogs/: CMakeLists.txt  metis_main.h  partition.cpp
MatrixVec/: CMakeLists.txt  Matrix.cpp  Matrix.h  SymMatrix.cpp  SymMatrix.h  vec.cpp  vec.h
Mesh/: CMakeLists.txt  Edge.cpp  Edge.h  Elem.cpp  Elem.h  Grain.cpp  Grain.h  Mesh.cpp  Mesh.h  Node.cpp  Node.h
metis-5.0.2/: CMakeLists.txt
metis-5.0.2/programs/: mpmetis.c
